<resources>
    <string name="app_name" translatable="false">UNIAtron</string>
    <string name="settings">Settings</string>
    <string name="time_credit_shop_title">Time Credit Shop</string>
    <string name="minutes_short">%1$d min</string>
    <string name="coin_offer" translatable="false">%1$d ©</string>
    <string name="trade">Trade</string>
    <string name="pref_category_general">General</string>
    <string name="emotion_title">How do you feel?</string>
    <string name="pref_app_blacklist">Blacklist</string>
    <string name="pref_app_blacklist_summary">Choose which apps to block.</string>
    <string name="pref_fitness_level">Fitness</string>
    <string name="pref_fitness_level_summary">Choose the effort needed for more app usage time.</string>
    <string name="pref_fitness_level_easy">Easy</string>
    <string name="pref_fitness_level_medium">Medium</string>
    <string name="pref_fitness_level_hard">Hard</string>
    <string name="channel_blacklist">Blacklist</string>
    <string name="channel_time_up">Time almost up</string>
    <string name="notify_package_added">New app installed</string>
    <string name="notify_package_added_summary">Press to add %1$s to the blacklist.</string>
    <string name="time_notification">Less than %1$d minutes left! Tap to get more time.</string>
    <string name="time_credits_header">Choose your time credit!</string>
    <string name="learning_aid_active">The learning aid is active, you still have to wait %d minutes.</string>
    <string name="card_summary_title">Summary</string>
    <string name="app_usage">App usage</string>
    <string name="app_usage_time">Usage time: %1$d:%2$02d min</string>
    <string name="onboarding_btn_whitelist">Whitelist</string>
    <string name="onboarding_btn_grant">Grant</string>
    <string name="onboarding_btn_blacklist">Choose apps</string>
    <string name="onboarding_intro_description">Keep an eye on your health and productivity</string>
    <string name="onboarding_app_usage_title">App usage</string>
    <string name="onboarding_app_usage_description">We need your permission to detect and display your most used apps</string>
    <string name="onboarding_app_usage_granted_description">We detect and display your most used apps</string>
    <string name="onboarding_coinbag">Your steps become coins</string>
    <string name="onboarding_coinbag_description">Use them in the shop!\n\nTo make sure we don\'t miss any steps, you need to whitelist UNIAtron from system battery management. Select \'All Apps\' to find UNIAtron and disable the setting</string>
    <string name="onboarding_coinbag_granted_description">Use them in the shop!</string>
    <string name="onboarding_shop_title">Shop</string>
    <string name="onboarding_shop_description">Visit the shop to trade your collected coins for additional app time\n\nWe will give you a bonus so you can try it out after the intro!</string>
    <string name="onboarding_blacklist_title">Almost done</string>
    <string name="onboarding_blacklist_description">Add apps to your blacklist\nThey will be blocked when your time runs out\n\nYou can always change these settings later</string>
    <string name="onboarding_btn_shop">Awesome</string>
    <string name="show_all">Show all</string>
    <string name="show_only_top_five">Show only top 5</string>
    <string name="time_in_minutes">%1$d:%2$02d minutes</string>
    <string name="card_summary_steps">You walked %1$d steps and felt %2$s during this period.</string>
    <string name="total">Total</string>
    <string name="emotion_angry">angry</string>
    <string name="emotion_sad">sad</string>
    <string name="emotion_neutral">neutral</string>
    <string name="emotion_happy">happy</string>
    <string name="emotion_fantastic">fantastic</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="about_description">UNIAtron was created for Mobile Application Development, a course at the University Augsburg in 2018.</string>
    <string name="feedback_question">Do you like our app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="coin_bag">Coin Bag</string>
    <string name="time_account">Time Account</string>
    <string name="time_account_desc">%1$d:%2$02d min</string>
    <string name="appbar_scrolling_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="today">Today</string>
    <string name="group_by">Group by</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="onboarding_body_sensor">Step tracking accuracy</string>
    <string name="onboarding_body_sensor_description">For a better accuracy we need to access the body sensors of your mobile phone</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
