<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:title="@string/group_by"
        app:showAsAction="never">
        <menu>
            <group
                android:checkableBehavior="single"
                android:menuCategory="secondary">
                <item
                    android:id="@+id/group_by_year"
                    android:title="@string/year" />
                <item
                    android:id="@+id/group_by_month"
                    android:title="@string/month" />
                <item
                    android:id="@+id/group_by_day"
                    android:checked="true"
                    android:title="@string/day" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/today"
        android:title="@string/today"
        app:showAsAction="never" />
</menu>
